--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,61 @@
     transform: rotate(360deg);
   }
 }
+
+.Message {
+  display: flex;
+  align-items: flex-end;
+  gap: 27px;
+}
+
+.Message-box {
+  background-color: rgb(11, 167, 133);
+  /* border: 2px solid rgb(11, 167, 133); */
+  border-radius: 30px;
+  max-width: 350px;
+  position: relative;
+}
+
+.Message-box::before {
+  position: absolute;
+  content: '';
+  height: 25px;
+  top: 111px;
+  right: -8px;
+  width: 20px;
+  background-color:  rgb(11, 167, 133);
+  border-bottom-left-radius: 16px 14px;
+}
+
+.Message-box::after {
+  position: absolute;
+  content: '';
+  height: 25px;
+  top: 111px;
+  right: -26px;
+  width: 26px;
+  background-color:  #282c34;
+  border-bottom-left-radius: 10px;
+}
+
+.Message-text {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: 25px;
+  text-align: right;
+  color: #000;
+  padding: 0 17px;
+}
+
+.Message-sender h2 {
+  padding: 0;
+  margin: 0;
+  font-style: italic;
+  font-weight: 100;
+  font-size: 25px;
+}
+
+.send {
+	/* background:  rgba(11, 167, 133, 0.781); */
+	align-self: flex-end;
+}
