--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Roboto", sans-serif;
+}
+
 .App {
   text-align: center;
 }
@@ -19,9 +23,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-header form {
+  display: flex;
+  gap: 30px;
 }
 
 .App-link {
@@ -40,6 +49,7 @@
 .Message {
   display: flex;
   align-items: flex-end;
+  position: relative;
   gap: 27px;
 }
 
@@ -55,28 +65,27 @@
 
 .Message-box::before {
   position: absolute;
-  content: '';
+  content: "";
   height: 25px;
   top: 68%;
   right: -8px;
   width: 20px;
-  background-color:  rgb(11, 167, 133);
+  background-color: rgb(11, 167, 133);
   border-bottom-left-radius: 16px 14px;
 }
 
 .Message-box::after {
   position: absolute;
-  content: '';
+  content: "";
   height: 25px;
   top: 68%;
   right: -26px;
   width: 26px;
-  background-color:  #282c34;
+  background-color: #282c34;
   border-bottom-left-radius: 10px;
 }
 
 .Message-text {
-  font-family: 'Roboto', sans-serif;
   font-weight: 100;
   font-size: 25px;
   text-align: right;
@@ -85,16 +94,23 @@
 }
 
 .Message-sender h2 {
+  position: absolute;
   padding: 0;
   margin: 0;
   font-style: italic;
   font-weight: 100;
   font-size: 25px;
+  top: 70%;
+  width: 350px;
+  text-align: left;
 }
 
 .send {
-	/* background:  rgba(11, 167, 133, 0.781); */
-	align-self: flex-end;
+  align-self: flex-end;
+}
+
+.messages-send-form {
+  margin-bottom: 15px;
 }
 
 .messages-field {
@@ -109,4 +125,26 @@
 
 .messages-send-form {
   margin-top: 50px;
+}
+
+.message-input {
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  font-size: 25px;
+  padding-left: 10px;
+  background-color: transparent;
+  border-top: 0;
+  border-right: 0;
+  border-bottom: 1px solid rgb(11, 167, 133);
+  border-left: 0;
+  outline: none;
+  color: #fff;
+}
+
+.message-send {
+  background: none;
+  border: 0;
+  font-size: 30px;
+  color: rgb(11, 167, 133);
+  cursor: pointer;
 }
