--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
 .App {
   text-align: center;
 }
@@ -20,12 +26,41 @@ body {
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+nav {
+  position: fixed;
+  /* overflow: hidden; */
+  z-index: 999;
+}
+
+nav ul {
+  display: flex;
+  gap: 20px;
+  padding-left: 10px;
+}
+
+nav ul a {
+  text-decoration: none;
+  color: white;
+  text-transform: uppercase;
+}
+
+nav ul a:hover {
+  color: rgb(11, 167, 133);
+}
+
+.chats-list {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
   justify-content: flex-end;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-grow: 1;
 }
 
 .App-header form {
